@@ -1568,6 +1568,7 @@ GEN     ZX_compositum_disjoint(GEN A, GEN B);
 GEN     compositum(GEN P, GEN Q);
 GEN     compositum2(GEN P, GEN Q);
 GEN     nfdisc(GEN x);
+GEN     get_modpr(GEN x);
 GEN     indexpartial(GEN P, GEN DP);
 GEN     modpr_genFq(GEN modpr);
 GEN     nf_to_Fq_init(GEN nf, GEN *pr, GEN *T, GEN *p);
@@ -3981,6 +3982,9 @@ INLINE GEN    idealpseudomin(GEN I, GEN G);
 INLINE GEN    idealpseudomin_nonscalar(GEN I, GEN G);
 INLINE GEN    idealred_elt(GEN nf, GEN I);
 INLINE GEN    idealred(GEN nf, GEN I);
+INLINE GEN    modpr_get_pr(GEN x);
+INLINE GEN    modpr_get_p(GEN x);
+INLINE GEN    modpr_get_T(GEN x);
 INLINE GEN    nf_get_M(GEN nf);
 INLINE GEN    nf_get_G(GEN nf);
 INLINE GEN    nf_get_Tr(GEN nf);
